# weekly-brew-lab

./: .gitignore  LICENSE  README.md
topics/ML-fundamentals/: ml-fundamentals.ipynb
topics/ML-fundamentals/manim/: backprop_viz.py  gradient_descent_viz.py  overfitting_viz.py  vanishing_gradient_viz.py
topics/build-large-language-models-from-scratch/: ch01-build-an-llm-from-scratch.ipynb  ch02-working-with-text-data.ipynb
topics/magenta-realtime-2/magentic-improv/: app.py  audio_to_midi.py  engine.py  pyproject.toml
topics/magenta-realtime-2/personal-dj/: SPEC_personal_dj.md  app.py  context.py  engine.py  pyproject.toml
weekly-brews/magenta-realtime-2/: README.md
weekly-brews/magenta-realtime-2/personal-dj/: app.py  context.py  engine.py  pyproject.toml
